--- a/style.css
+++ b/style.css
@@ -71,10 +71,9 @@ a{
 
 .stickySocialMedia{
   transition: 1s;
-  position: absolute;
+  position: fixed;
   top: -10vw;
   right: 14.2vw;
-  border: 1px solid red;
 }
 .stickySocialMedia .fa-facebook,.stickySocialMedia .fa-twitter,.stickySocialMedia .fa-instagram{
   width: 2vw;
@@ -91,7 +90,6 @@ a{
   top: 0px;
   right: 4vw;
   font-family: 'WorkSans-Bold';
-  border: 1px solid yellow;
   display: flex;
   align-items: center;
   font-size: 0.96vw;
