--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,11 @@ div,main{
 a{
   text-decoration: none;
 }
+h2{
+  font-family: 'Oranienbaum', serif;
+  font-size: 5.345vw;
+  color: rgb(85,85,85);
+}
 /* sticky menu */
 .stickyMenu{
   overflow: hidden;
@@ -395,6 +400,9 @@ main{
   border: 1px solid rgb(232,226,126);
   background-color: rgb(232,226,126);
 }
+.greatBuysButton:hover{
+  cursor: pointer;
+}
 .greatBuysButton p{
   text-align: center;
   margin-right: 26.28%;
@@ -428,6 +436,7 @@ main{
 }
 /* SPECIAL SALES SECTION */
 .specialSales{
+  position: relative;
   padding-top: 0.1px;
   width: 100%;
   height: 13.363vw;
@@ -480,3 +489,146 @@ main{
   font-size: 1.63vw;
   background-color: rgba(221,219,135,1);
 }
+/* NEW ARIVALS */
+.newArrivals{
+  padding-top: 0.1px;
+  position: relative;
+  width: 100%;
+  height: 39.86vw;
+}
+.newArrivals .greatBuysButton{
+  background-color: rgb(247,200,197);
+  border-color: rgb(247,200,197);
+}
+.newArrivals h2{
+  margin: 0;
+  margin-left: 23.23vw;
+  margin-top: 5vw;
+}
+.carWraper{
+  position: absolute;
+  top: 11.358vw;
+  left: 0px;
+  width: 100%;
+  height: 22.5vw;
+  background-color: rgb(247,200,197);
+}
+.leftImage{
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 23.23vw;
+  height: 30.734vw;
+  background-image: url('../img/png/lipstick.png');
+}
+.blurBox{
+  z-index: 1;
+  box-shadow: inset 0px 0px 1.2vw 0.9vw rgb(247,200,197);
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  /* border: 5px solid red; */
+}
+.carContainer{
+  position: absolute;
+  height: 100%;
+  width: 65.3vw;
+  right: 6vw;
+  top: 0px;
+  overflow: hidden;
+}
+#carouselOne{
+  transition: 0.7s;
+  display: flex;
+  position: relative;
+  top: 16.5%;
+  height: 67.65%;
+  width: 140%;
+  left: -0%;
+}
+#carouselTwo{
+  transition: 0.7s;
+  display: flex;
+  position: relative;
+  top: 16.5%;
+  height: 67.65%;
+  width: 140%;
+  left: -0%;
+}
+.carPicContainer{
+  position: relative;
+  height: 100%;
+  width: 20%;
+  text-align: center;
+}
+.carPicContainer p{
+  font-family: 'WorkSans-Regular';
+  margin: 0;
+  font-size: 1.11vw;
+}
+.carPicContainer >div:nth-child(1){
+  position: relative;
+  height: 75%;
+  width: 100%;
+}
+
+.firstCarPicOne{background-image: url('../img/png/car-one/carPicOne.png');}
+.firstCarPicTwo{background-image: url('../img/png/car-one/carPicTwo.png');}
+.firstCarPicThree{background-image: url('../img/png/car-one/carPicThree.png');}
+.firstCarPicFour{background-image: url('../img/png/car-one/carPicFour.png');}
+.firstCarPicFive{background-image: url('../img/png/car-one/carPicFive.png');}
+.firstCarPicSix{background-image: url('../img/png/car-one/carPicOne.png');}
+.firstCarPicSeven{background-image: url('../img/png/car-one/carPicTwo.png');}
+
+
+.arrow{
+  position: absolute;
+  left: 2.1vw;
+  top: -2vw;
+  width: 10vw;
+  height: 10vw;
+  border: 2px solid white;
+  transform: rotate(45deg);
+}
+.leftCarArrowBox{
+  overflow: hidden;
+  position: absolute;
+  width: 3.2vw;
+  height: 6.31vw;
+  top:7.05vw;
+  left: 24vw;
+}
+.rightCarArrowBox{
+  overflow: hidden;
+  transform: rotate(180deg);
+  position: absolute;
+  width: 3.2vw;
+  height: 6.31vw;
+  top:7.05vw;
+  right:3vw;
+}
+.leftCarArrowBox:hover ,.rightCarArrowBox:hover{
+  cursor: pointer;
+}
+
+/* BEST SELLERS SECTION ,carTwo*/
+.bestSellers .carWraper{
+  background-color: rgb(249,216,193);
+}
+.bestSellers .greatBuysButton{
+  background-color: rgb(249,216,193);
+  border-color: rgb(249,216,193);
+}
+.bestSellers .leftImage{
+  background-image: url('../img/png/car-two/carTwoLeftPic.png');
+}
+
+.bestSellers .firstCarPicOne{background-image: url('../img/png/car-two/carTwoPicOne.png');}
+.bestSellers .firstCarPicTwo{background-image: url('../img/png/car-two/carTwoPicTwo.png');}
+.bestSellers .firstCarPicThree{background-image: url('../img/png/car-two/carTwoPicThree.png');}
+.bestSellers .firstCarPicFour{background-image: url('../img/png/car-two/carTwoPicFour.png');}
+.bestSellers .firstCarPicFive{background-image: url('../img/png/car-two/carTwoPicFive.png');}
+.bestSellers .firstCarPicSix{background-image: url('../img/png/car-two/carTwoPicOne.png');}
+.bestSellers .firstCarPicSeven{background-image: url('../img/png/car-two/carTwoPicTwo.png');}
