--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,21 @@ div,main{
 }
 a{
   text-decoration: none;
+  font-family: 'WorkSans-Regular';
 }
 h2{
   font-family: 'Oranienbaum', serif;
   font-size: 5.345vw;
+  color: rgb(85,85,85);
+}
+h3{
+  font-size:2.6vw ;
+  font-family: 'Oranienbaum', serif;
+  color: rgb(85,85,85);
+  margin: 0;
+}
+p{
+  font-family: 'WorkSans-Regular';
   color: rgb(85,85,85);
 }
 /* sticky menu */
@@ -529,7 +540,6 @@ main{
   bottom: 0px;
   width: 100%;
   height: 100%;
-  /* border: 5px solid red; */
 }
 .carContainer{
   position: absolute;
@@ -599,6 +609,7 @@ main{
   height: 6.31vw;
   top:7.05vw;
   left: 24vw;
+  z-index: 3;
 }
 .rightCarArrowBox{
   overflow: hidden;
@@ -636,3 +647,223 @@ main{
 .bestSellers .firstCarPicFive{background-image: url('../img/png/car-two/carTwoPicFive.png');}
 .bestSellers .firstCarPicSix{background-image: url('../img/png/car-two/carTwoPicOne.png');}
 .bestSellers .firstCarPicSeven{background-image: url('../img/png/car-two/carTwoPicTwo.png');}
+
+/* trending section */
+.trendingLooksSection{
+  width: 100%;
+  height: 36.74vw;
+}
+.trendingLooksSection h2{
+  margin-top: -1vw;
+}
+
+.trendingLooksSection .carWraper{
+  top: 5.567vw;
+  background-color: rgb(202,164,207);
+}
+
+.trendingLooksSection .greatBuysButton{
+  background-color: rgb(202,164,207);
+  border-color: rgb(202,164,207);
+}
+.trendingLooksSection .greatBuysButton p{
+  color: #d47959;
+}
+
+.trendingLooksSection .leftImage{
+  background-image: url('../img/png/handsPng.png');
+  bottom:-2.227vw;
+  height: 34.15vw;
+}
+
+.trendingThreePicWraper{
+  display: flex;
+  position: absolute;
+  right: 3.93vw;
+  bottom: -2.227vw;
+}
+
+.trendingThreePicWraper div{
+  width: 22.27vw;
+  height: 22.27vw;
+  margin-left: 1.85vw;
+}
+.trendingPicOne{background-image: url('../img/trendingPicOne.jpg');}
+.trendingPicTwo{background-image: url('../img/trendingPicTwo.jpg');}
+.trendingPicThree{background-image: url('../img/trendingPicThree.jpg');}
+
+/* INSTAGRAM SECTION */
+.gridBoxSpecial{
+  width: 74.12%;
+  height: 44.477vw;
+  margin-left: 13%;
+  margin-top: 4.08vw;
+  display: grid;
+  grid-template-columns: 20% 60% 20%;
+  grid-template-rows: 33% 33% 33%;
+  grid-gap: 0.222vw;
+  padding: 0.5vw;
+  padding-bottom: 0;
+}
+.gridBoxSpecial div{
+  position: relative;
+  overflow: hidden;
+}
+.gridBoxSpecial div:hover{
+  cursor: pointer;
+}
+
+.gridBoxSpecial div:nth-child(1) h2{
+  font-family: 'Oranienbaum', serif;
+  position: relative;
+  z-index: 1;
+  writing-mode:tb-rl;
+  color: white;
+  font-size: 6vw;
+  margin: 0;
+  margin-top: 1vw;
+  margin-left: 3vw;
+}
+.gridBoxSpecial div:nth-child(1){
+  background-color: rgb(229,224,102);
+  grid-row: 1/3;
+  grid-column: 1/2;
+}
+.gridBoxSpecial div:nth-child(2){
+  grid-row: 1/4;
+  grid-column: 2/3;
+  background-image: url('../img/instagram-grid/bigPicGrid.jpg');
+}
+.gridBoxSpecial div:nth-child(3){
+  grid-row: 1/2;
+  grid-column: 3/4;
+  background-image: url('../img/instagram-grid/topRight.jpg');
+}
+.gridBoxSpecial div:nth-child(4){
+  grid-row: 2/3;
+  grid-column: 3/4;
+  background-image: url('../img/instagram-grid/rightMid.jpg');
+}
+.gridBoxSpecial div:nth-child(5){
+  grid-row: 3/4;
+  grid-column: 3/4;
+  background-image: url('../img/instagram-grid/rightBot.jpg');
+}
+.gridBoxSpecial div:nth-child(6){
+  grid-row: 3/4;
+  grid-column: 1/2;
+  background-image: url('../img/instagram-grid/parfume.jpg');
+}
+
+/*  SECTION NEWS AND EVENTS */
+.newsAndEventsSection{
+  /* border: 1px solid green; */
+}
+.newsAndEventsSection a{
+  color: black;
+  font-size: 1.336vw;
+  color: rgb(85,85,85);
+}
+.pinkBox{
+  position: relative;
+  margin-top: 6.31vw;
+  background-color: rgb(248,243,239);
+  width: 100%;
+  height: 74.23vw;
+}
+.newsAndEventsSection h2{
+  margin: 0;
+  margin-top: 3.34vw;
+  text-align: center;
+}
+
+.carThreeContainer{
+  position: absolute;
+  width: 91vw;
+  height: 57.5vw;
+  bottom: 0px;
+  margin-left: 50%;
+  left:-45.5vw;
+    overflow: hidden;
+}
+
+.carouselThree{
+  transition: 0.7s;
+  display: flex;
+  position: absolute;
+  width: 150%;
+  height: 100%;
+  left:0%;
+}
+.carouselThree>div{
+  width: 32%;
+  margin-right: 0.666%;
+  margin-left: 0.666%;
+}
+.carDivOne,.carDivTwo,.carDivThree{
+  width: 100%;
+  height:51.28%;
+}
+.carDivOne{background-image: url('../img/car-three/picOne.jpg');}
+.carDivTwo{background-image: url('../img/car-three/picTwo.jpg');}
+.carDivThree{background-image: url('../img/car-three/picThree.jpg');}
+
+.yellowSquareContainer{
+  margin-top: 2.59vw;
+  display: flex;
+}
+.yellowSquareContainer p{
+  margin: 0;
+}
+.YellowSquare{
+  margin: 4px;
+  text-align: center;
+  width: 4.45vw;
+  height: 4.45vw;
+  border: 1px solid rgb(239,234,171);
+  outline: 4px solid rgb(229,225,100);
+  margin-right: 1vw;
+}
+.YellowSquare p{
+  margin: 0;
+  font-size: 1.336vw;
+}
+.YellowSquare b:nth-child(1) p{
+  margin-top: 0.6vw;
+  margin-bottom: -0.3vw;
+}
+.loremIpsumText{
+  margin-top: 2.227vw;
+}
+.loremIpsumText p{
+  font-size: 1.336vw;
+  margin: 0;
+  line-height: 1.6vw;
+  margin-bottom: 2.5vw;
+}
+
+
+
+.carThreeArrowContainer{
+  position: relative;
+  width: 6.68vw;
+  height: 2.96vw;
+  margin-left: 50%;
+  margin-top: 0.37vw;
+  left: -3.34vw;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.carThreeArrowContainer>div{
+  background-image: url('../img/carThreeArrow.jpg');
+  width: 45%;
+  height: 100%;
+}
+.carThreeArrowContainer>div:hover{
+  cursor: pointer;
+}
+#carThreeRightArrow{
+  transform: rotate(180deg);
+}
