--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1013,6 +1013,7 @@ nav div:nth-child(2){
 }
 /* FOOTER */
 footer{
+  padding-top: 0.1px;
   position: relative;
   width: 100%;
   height: 11.65vw;
@@ -1021,10 +1022,10 @@ footer{
 
 footer .nailsPng{
   position: relative;
-  width: 15.367vw;
-  height: 4.825vw;
+  width: 16.367vw;
+  height: 5.825vw;
   margin-left: 50%;
-  top:2.227vw;
+  margin-top: 2vw;
   left:-7.68vw;
 }
 
