--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -785,7 +785,7 @@ main{
   padding-top: 0.1px;
   background-color: rgb(248,243,239);
   width: 100%;
-  height: 74.23vw;
+  min-height: 74.23vw;
 }
 .newsAndEventsSection h2{
   margin: 0;
@@ -794,7 +794,7 @@ main{
 }
 
 .carThreeContainer{
-  position: absolute;
+  position: relative;
   width: 91vw;
   height: 57.5vw;
   bottom: 0px;
@@ -979,7 +979,7 @@ main{
 /* NEED HELP? SECTION  */
 .needHelpSection{
   position: relative;
-  height: 27.83vw;
+  min-height: 27.83vw;
   border-top: 0.37vw solid rgb(243,230,228);
   background-color: rgb(245,236,235);
 }
@@ -1070,7 +1070,9 @@ footer span{
   .numberCover,
   .laquerText,
   .triangleBox,
-  .price
+  .price,
+  .bodyCreamTextBox p,
+  .priceOff
   {
     display: none;
   }
@@ -1129,7 +1131,7 @@ footer span{
   .specialOfferSection h2{
     font-size: 12vw;
   }
-  .specialOfferSection p{
+  .favoriteProductP{
     font-size: 5vw;
   }
   .linePng{
@@ -1163,5 +1165,71 @@ footer span{
     width: 100%;
     left: 0;
     top: 120vw;
+  }
+  /* INSTAGRAM SECTION  */
+  .gridBoxSpecial{
+    height: 172vw;
+    width: 90%;
+    margin-left: 5%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+  .gridBoxSpecial div:nth-child(1){display: none;}
+  .gridBoxSpecial div:nth-child(2){
+    grid-row: 1/3;
+    grid-column: 1/3;
+  }
+  .gridBoxSpecial div:nth-child(3){
+    grid-row: 3/4;
+    grid-column: 1/2;
+    margin-left: 5%;
+  }
+  .gridBoxSpecial div:nth-child(4){
+    grid-row: 3/4;
+    grid-column: 2/3;
+    margin-right: 5%;
+  }
+  .gridBoxSpecial div:nth-child(5){
+    grid-row: 4/5;
+    grid-column: 1/2;
+    margin-left: 5%;
+  }
+  .gridBoxSpecial div:nth-child(6){
+    grid-row: 4/5;
+    grid-column: 2/3;
+    margin-right: 5%;
+  }
+  /* BODY CREAM SECTION */
+  .bodyCream{
+    height: 231.87vw;
+  }
+  .narrowDivBG{
+    height: 46.87vw;
+    width: 140vw;
+    bottom: -7vw;
+    border-width: 2vw;
+  }
+  .bodyCreamTextBox{
+    margin-left: 0;
+  }
+  .bodyCreamTextBox h2{
+    color: black;
+    transform: none;
+    font-size: 12vw;
+    text-align: center;
+  }
+  .BBcream{
+    top:20vw;
+    left: 0px;
+    margin-left: 0;
+    width: 100%;
+    height: 170vw;
+  }
+  .regularPriceTextBox p{
+    font-size: 4.375vw;
+  }
+  .regularPriceTextBox a{
+    margin-top: 5vw;
+    font-size: 4.375vw;
   }
 }
