--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body{
 }
 div,main,section{
   background-size: 100% 100%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 a{
   text-decoration: none;
