--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,51 +63,101 @@ button:hover{
   cursor: pointer;
 }
 /* sticky menu */
+.stickyBackgroundLayer{
+  position: fixed;
+  top: -1px;
+  left: 0px;
+  transition: 1s;
+  width: 100%;
+  height: 8.88vw;
+  overflow: hidden;
+  z-index: 10
+}
+.stickyBgInLayer{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 8.88vw;
+  background-image: url('../img/stickyBG.jpg');
+}
 .stickyMenu{
+  border-color: red;
   overflow: hidden;
   transition: 1s;
   position: fixed;
   top: -1px;
   left: 0px;
   width: 100%;
-  height: 0vw;
-  background-color: rgb(52,11,76,0.9);
-  z-index: 10;
-  border-bottom: 1px solid rgb(209,127,100);
+  height: 8.88vw;
+  z-index: 20;
+  border-bottom: 1px solid white;
 }
 .stickyMenuInside{
+  /* background-image: url('../img/stickyBG.jpg'); */
+  background-color: rgb(52,11,76,0.9);
   position: absolute;
   left: 0px;
   top: 0px;
   width: 100%;
-  height: 3.427vw;
-  z-index: 11;
+  height: 8.88vw;
+  z-index: 21;
+}
+.BEYOUTY{
+  position: absolute;
+  margin-left: 50%;
+  top: 0.74vw;
+  left: -6vw;
+  width: 11.85vw;
+  height: 4.4vw;
+  background-image: url('../img/png/Pro.png');
+}
+.carBox{
+  position: absolute;
+  top: 0.25vw;
+  right: 6.88vw;
+}
+.carBox p{
+  color:rgb(255,240,0);
+  text-align: center;
+  margin: 0;
+  margin-bottom: -0.5vw;
+  font-size: 1.62vw;
+}
+.cart{
+  background-image: url('../img/png/cart.png');
+  width: 2.74vw;
+  height: 2.14vw;
 }
 .stickyTodaysSpecial{
+  position: absolute;
+  bottom: 0;
   font-family: 'WorkSans-Bold';
-  margin-left: 6.4vw;
+  margin-left: 4.8vw;
 }
 .stickyTodaysSpecial p{
-  color: rgb(209,127,100);
-  font-size:1.341vw;
+  margin-bottom: 0.7vw;
+  color: white;
+  font-size:1.33vw;
 }
 .stickyMenuNav{
   display: flex;
   justify-content: space-between;
   position: absolute;
-  height: 3.427vw;
-  width: 26.08vw;
-  left: 35.24vw;
-  top:0.9vw;
+  height: 2.15vw;
+  width: 19.25vw;
+  margin-left: 50%;
+  left: -9.7vw;
+  bottom:0;
 }
 .stickyMenuNav a{
   transition: 0.35s;
-  color:rgb(209,127,100);
+  color:white;
   font-family: 'WorkSans-Regular';
-  font-size: 1.3vw;
+  font-size: 1.18vw;
 }
 .stickyMenuNav a:hover{
-  color: white;
+  color: rgb(255,213,53);
 }
 
 .stickySocialMedia{
@@ -132,79 +182,85 @@ button:hover{
 
 .stickyLogin{
   position: absolute;
-  top: 0px;
-  right: 4vw;
+  bottom: 0px;
+  right: 4.8vw;
   font-family: 'WorkSans-Bold';
   display: flex;
-  align-items: center;
+  align-items:  center;
   font-size: 0.96vw;
+  height: 3.5vw;
 }
 .stickyLogin p{
-  color: rgb(209,127,100);
+  font-weight: 900;
+  color: white;
+  font-size: 1.33vw;
 }
 .loginPng{
   margin-left: 1vw;
   background-image: url('../img/png/loginButton.png');
   width: 1.2vw;
-  height: 1vw;
+  height: 0.9vw;
 }
 .stickyLogin:hover{
   cursor: pointer;
 }
 /* MAIN MAIN MAIN */
 main{
+  margin-top: 8.88vw;
   padding-top: 0.1px;
   position: relative;
-  height: 44.70vw;
+  height: 51.85vw;
   background-image: url('../img/coverBG.jpg');
 }
-.nailsPng{
-  background-image: url('../img/png/nails.png');
-  width: 20.64vw;
-  height: 6.33vw;
-  margin-left: 4.02vw;
-  margin-top: 5.29vw;
-}
-.numberCover{
-  font-family: 'WorkSans-Regular';
-  font-size: 1.9vw;
-  color:rgb(209,127,100);
-  margin: 0vw;
-  margin-left: 6.4vw;
-}
-.laquer{
-  background-image: url('../img/png/laquer.png');
-  width: 13.71vw;
-  height: 24.73vw;
-  margin-left: 5.66vw;
-  margin-top: 3vw;
-}
-.laquerText{
-  font-family: 'WorkSans-Regular';
-  color: rgb(209,127,100);
-  font-size: 1.26vw;
-  margin: 0;
-  margin-left: 5.5vw;
-}
-.makeAppointentMobile{
-  display: flex;
+
+.dior{
   position: absolute;
-  bottom: 1vw;
-  right: 6.31vw;
+  z-index: 13;
+  width: 32.96vw;
+  height: 47.55vw;
+  bottom: -7.15vw;;
 }
-.appointmentsMobilePNG{
-  background-image: url('../img/mobile-img/mobilePng/appointments.png');
-  width: 5vw;
-  height: 5vw;
+.crayon{
+  position: absolute;
+  z-index: 13;
+  width: 4.666vw;
+  height: 23.92vw;
+  bottom: -0.74vw;
+  left: 34.07vw;
 }
-.makeAppointentMobile p{
-  font-family: 'WorkSans-Bold';
-  font-size: 1.5vw;
-  margin-right: 2vw;
-  margin-top: 3vw;
-  opacity: 0.5;
-  color: white;
+.crayonShadow{
+  position: absolute;
+  z-index: 13;
+  left: 34.07vw;
+  bottom: -24.7vw;
+  width: 4.666vw;
+  height: 23.925vw;
 }
+.browBrush{
+  position: absolute;
+  z-index: 14;
+  right: 28.3vw;
+  bottom: -8.1vw;
+  width: 21.92vw;
+  height: 13.85vw;
+}
+.eyeBrush{
+  position: absolute;
+  z-index: 14;
+  right: 0;
+  bottom: -3.1vw;
+  width: 6.74vw;
+  height: 23.185vw;
+}
+.girl{
+  position: absolute;
+  z-index: 13;
+  width: 39.11vw;
+  height: 54.74vw;
+  bottom: 0;
+  right: 0;
+}
+
 /*  lineDownAnim animations*/
 .lineDownAnim{
   position: absolute;
@@ -513,12 +569,16 @@ main{
   border-radius: 3px;
 }
 
-.checked{
-  color:rgb(255,166,0);
-}
 .gridContainer .fa::before{
   font-size: 1.3vw;
-  text-shadow: 2px 2px white;
+  text-shadow: 1px 1px white;
+}
+.unchecked{
+  color:white;
+}
+.checked{
+  position: relative;
+  color:rgb(255,166,0);
 }
 
 .gridBox{
@@ -1286,6 +1346,14 @@ footer{
   background-color: rgb(62,32,76);
 }
 
+.nailsPng{
+  background-image: url('../img/png/nails.png');
+  width: 20.64vw;
+  height: 6.33vw;
+  margin-left: 4.02vw;
+  margin-top: 5.29vw;
+}
+
 footer .nailsPng{
   position: relative;
   width: 16.367vw;
@@ -1329,11 +1397,7 @@ footer span{
 @media(orientation:portrait){
   .stickyMenuNav,
   .stickyLogin,
-  #stickySocialMedia,
-  .laquer,
   .nailsPng,
-  .numberCover,
-  .laquerText,
   .triangleBox,
   .bodyCreamTextBox p,
   .priceOff,
